git-ops/infra/minio/tenant/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: tenant-loki
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "61.77.247.3/32"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - minio.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: minio.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tenant-loki-console
                port:
                  number: 9090
